Fix some layout issues and missing Jest in mission_db

--- a/src/components/ProjectContainer/ProjectContainer.css
+++ b/src/components/ProjectContainer/ProjectContainer.css
@@ -1,4 +1,5 @@
 .project {
+  width: 800px;
   padding: 2em;
   margin: 0 auto;
   text-align: center;
@@ -11,6 +12,7 @@
 }
 
 .project__description {
+  width: 100%;
   margin-top: 2.5em;
   text-align: left;
 }
